test cases for rt updater